--- a/NodeJS/TypeScript/Es04_Dispatcher/package.json
+++ b/NodeJS/TypeScript/Es04_Dispatcher/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@types/mime": "^2.0.3",
     "@types/node": "^16.9.6",
-    "mime": "^2.5.2"
+    "@types/query-string": "^6.3.0",
+    "mime": "^2.5.2",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {},
   "scripts": {
