--- a/Express/Es01_Express/package.json
+++ b/Express/Es01_Express/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.ts",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/mime": "^2.0.3",
     "@types/node": "^16.9.6",
